--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
   def room_version = "1.1.1"
 
+  compile 'com.facebook.stetho:stetho:1.5.0'
   implementation "android.arch.persistence.room:runtime:$room_version"
   implementation 'com.android.support.constraint:constraint-layout:1.1.3'
   kapt "android.arch.persistence.room:compiler:$room_version"
