--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,17 @@ dependencies {
 
   def room_version = "1.1.1"
 
-  compile 'com.facebook.stetho:stetho:1.5.0'
+
   implementation "android.arch.persistence.room:runtime:$room_version"
-  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
   kapt "android.arch.persistence.room:compiler:$room_version"
 
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+  compile 'com.facebook.stetho:stetho:1.5.0'
+  implementation 'com.jakewharton.timber:timber:4.7.1'
+
+  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
   implementation 'com.android.support:appcompat-v7:28.0.0'
 
   testImplementation 'junit:junit:4.12'
