--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,13 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
   def room_version = "1.1.1"
+  def lifecycle_version = "1.1.1"
 
 
+  implementation "android.arch.lifecycle:extensions:$lifecycle_version"
   implementation "android.arch.persistence.room:runtime:$room_version"
   kapt "android.arch.persistence.room:compiler:$room_version"
+  kapt "android.arch.lifecycle:compiler:$lifecycle_version"
 
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
