--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,12 @@ dependencies {
   def room_version = "1.1.1"
   def lifecycle_version = "1.1.1"
 
+  implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+  implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
   implementation "android.arch.lifecycle:extensions:$lifecycle_version"
   implementation "android.arch.persistence.room:runtime:$room_version"
+  implementation "android.arch.persistence.room:rxjava2:$room_version"
   kapt "android.arch.persistence.room:compiler:$room_version"
   kapt "android.arch.lifecycle:compiler:$lifecycle_version"
 
