--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,23 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  defaultConfig {
+    javaCompileOptions {
+      annotationProcessorOptions {
+        arguments = ["room.schemaLocation":
+                             "$projectDir/schemas".toString()]
+      }
+    }
+  }
+
+  sourceSets {
+    androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+  }
+
+  testOptions {
+    unitTests.returnDefaultValues = true
+  }
 }
 
 kotlin {
@@ -46,13 +63,17 @@ dependencies {
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.1'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  compile 'com.facebook.stetho:stetho:1.5.0'
+  implementation 'com.facebook.stetho:stetho:1.5.0'
   implementation 'com.jakewharton.timber:timber:4.7.1'
 
   implementation 'com.android.support.constraint:constraint-layout:1.1.3'
   implementation 'com.android.support:appcompat-v7:28.0.0'
 
   testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'junit:junit:4.12'
+
+  androidTestImplementation "android.arch.persistence.room:testing:$room_version"
+  androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
